ocaml/testsuite/tests/parsing/pr6604_2.compilers.reference
File "pr6604_2.ml", line 9, characters 1-3:
9 |  #1 "pr6604.ml"
     ^^
Error: The extension "layouts_alpha" is disabled and cannot be used
